feat: implements pending user friendship
